# ZBase

./: .gitattributes  .gitignore
.github/workflows/: ci.yml
.trae/rules/: code-rule.md  git-commit-message.md
AI/: ARCHITECTURE.md  BUILD_.md  CODING_RULES.md  MEMORY.md  PERFORMANCE.md  PROJECT.md  README.md  TASK_TEMPLATE.md  TESTING.md
source/: .gitignore  CMakeLists.txt  README.md
source/benchmarks/: CMakeLists.txt  bench_config.cpp  bench_file.cpp  bench_log.cpp  bench_string.cpp
source/cmake/: ZBaseConfig.cmake.in  zbase_compile_options.cmake  zbase_install.cmake  zbase_options.cmake  zbase_sanitizers.cmake
source/docs/: architecture.md  phase-1-done.md  phase-1-working-file.md  phase-2-done.md  phase-2-working-file.md
source/docs/superpowers/plans/: 2026-06-29-zbase-v0.1.md
source/examples/: CMakeLists.txt  demo.cpp
source/examples/file_string_demo/: CMakeLists.txt  main.cpp
source/examples/perf_dump_to_file/: CMakeLists.txt  main.cpp
source/examples/perf_stats/: CMakeLists.txt  main.cpp
source/examples/use_as_dependency/: CMakeLists.txt  README.md  main.cpp
source/include/zbase/: config.h  crash.h  error.h  file.h  log.h  perf.h  string.h  zbase.h
source/include/zbase++/: crash.hpp  error.hpp  log.hpp  perf_utils.hpp
source/include/zbase/internal/: c_api_guard.hpp
source/install/include/zbase/: log.h  perf.h  string.h  time.h
source/install/include/zbase++/: config.hpp  console.hpp  file.hpp  perf.hpp  string.hpp  time.hpp
source/install/lib/cmake/ZBase/: ZBaseConfig.cmake  ZBaseTargets-debug.cmake  ZBaseTargets.cmake
source/scripts/: build_project.py
source/src/core/config/: config.cpp
source/src/core/crash/: crash.cpp
source/src/core/error/: error.cpp  zbase_version.cpp
source/src/core/file/: dir_iter.cpp  file_reader.cpp  file_writer.cpp
source/src/core/log/: console.cpp  console.hpp  init_console.cpp  log.cpp
source/src/core/perf/: perf.cpp
source/src/core/string/: string.cpp
source/src/core/time/: time.cpp
source/src/platform/: crash_platform.cpp  crash_platform.hpp  dummy.cpp  encoding.cpp  encoding.hpp  file_platform.cpp  file_platform.hpp  time_platform.cpp  time_platform.hpp
source/tests/: CMakeLists.txt  test_init.cpp
source/tests/core/: test_config.cpp  test_cpp_wrapper.cpp  test_crash.cpp  test_error.cpp  test_file.cpp  test_log.cpp  test_perf.cpp  test_string.cpp  test_time.cpp
source/tests/integration/: test_demo.cpp
source/tests/platform/: test_encoding.cpp  test_file_platform.cpp  test_time_platform.cpp
